# lightshow

./: .gitignore
backend/: main.py  model.py  pyproject.toml  test.py  utils.py
frontend/: package-lock.json  package.json
