[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohue>=4.7.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
